# generative-anomalies

./: .gitignore  README.md  pyproject.toml  requirements.txt
generative_anomalies/genetics_anomalies/: settings.py
generative_anomalies/genetics_anomalies/code/experiments/: generate_dataset.py  train_generative_model.py
generative_anomalies/genetics_anomalies/code/src/: data_generator.py  mendelian_theory.py
generative_anomalies/models/: vae.py
