[tool.poetry]
name = "generative-anomalies"
version = "0.1.0"
description = ""
authors = ["Peter G. Chang <peter0414@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
seaborn = "^0.13.0"
optax = "^0.1.7"
wfdb = "^4.1.2"
flax = "^0.8.3"
tensorflow-probability = "^0.23.0"
tqdm = "^4.66.1"
jaxopt = "^0.8.3"
neurokit2 = "^0.2.7"
pytorch-forecasting = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [
    "**/data",
    "**/results",
    "*_venv/"
]
